Add node cache to search fields.